# fastapi-boilerplate

./: .dockerignore  .env.example  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  dnd5.py  price.py  users.py
src/core/: security.py  settings.py
src/db/: audit_mixin.py  base.py  session.py  user_database.py
src/db/managers/: base_manager.py
src/db/managers/models/: user_auth_manager.py  (+1 more)
src/db/utils/: __init__.py  base_manager.py
src/middlewares/: authentication_middleware.py  base.py  rate_limit_middleware.py
src/migrations/: env.py
src/migrations/versions/: 6b49e3ca417f_create_tables.py  9fd624f3f57b_first_revision.py
src/models/core/: __init__.py  user.py
src/schemas/auth/: login_request.py  token_response_schema.py
src/schemas/core/: auth.py  user.py
src/schemas/quotation/: __init__.py  quotation_schemas.py
src/services/: logger_service.py
src/services/auth/: authentication_service.py
src/services/dnd5/: README.md  __init__.py  dnd5_service.py
src/services/quotation/: __init__.py  quotation_service.py
src/services/users/: manager.py  validators.py
src/tests/: conftest.py  test_db.py  test_endpoints.py  test_quotation_service.py
src/tests/api/: test_users.py
src/tests/services/: test_dnd5_service.py
src/utils/security/: __init__.py  get_password_hash.py  hashers.py
(+2 files in other folders)
