[metadata]
name = base_project
version = 0.1.0
description = Projeto base FastAPI com autenticação, middlewares e migrations
author = Seu Nome
author_email = seu.email@exemplo.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seuusuario/base_project

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi
    uvicorn[standard]
    sqlalchemy
    asyncpg
    alembic
    python-jose
    pydantic
    email-validator
    passlib[bcrypt]
    python-dotenv

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    httpx
    black
    isort
    mypy
    coverage

[options.package_data]
* = *.ini, *.md

[flake8]
max-line-length = 88
exclude = .git,__pycache__,docs,venv,.venv,src/migrations/versions/,src/tests/
extend-ignore = WPS115,WPS214,WPS221,WPS202,WPS238,WPS412,WPS410

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
explicit_package_bases = True
namespace_packages = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    src

[coverage:report]
show_missing = True
skip_covered = True

